--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -1411,23 +1411,54 @@
     "    # Your code here\n",
     "    \n",
     "    # article_ids and article_names\n",
-    "    seen_articles = get_user_articles(1)[0]\n",
+    "\n",
     "    \n",
     "    # similar users ordered by quantity of interactions\n",
-    "    top_neighbours = get_top_sorted_users(1) \n",
+    "def user_user_recs_part2(user_id, m=10):\n",
+    "    '''\n",
+    "    INPUT:\n",
+    "    user_id - (int) a user id\n",
+    "    m - (int) the number of recommendations you want for the user\n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    recs - (list) a list of recommendations for the user by article id\n",
+    "    rec_names - (list) a list of recommendations for the user by article title\n",
+    "    \n",
+    "    Description:\n",
+    "    Loops through the users based on closeness to the input user_id\n",
+    "    For each user - finds articles the user hasn't seen before and provides them as recs\n",
+    "    Does this until m recommendations are found\n",
+    "    \n",
+    "    Notes:\n",
+    "    * Choose the users that have the most total article interactions \n",
+    "    before choosing those with fewer article interactions.\n",
+    "\n",
+    "    * Choose articles with the articles with the most total interactions \n",
+    "    before choosing those with fewer total interactions. \n",
+    "   \n",
+    "    '''\n",
+    "    # Your code here\n",
+    "    \n",
+    "    # article_ids and article_names\n",
+    "    article_interactions = df.groupby('article_id').count()['user_id'].reset_index().sort_values(by='user_id',ascending=False)\n",
+    "    seen_articles = get_user_articles(user_id)[0]\n",
+    "\n",
+    "    # similar users ordered by quantity of interactions\n",
+    "    top_neighbours = get_top_sorted_users(user_id) \n",
     "    neighbour_list = list(top_neighbours['neighbour_id'])\n",
+    "\n",
     "    recs = []\n",
     "\n",
     "    for n in neighbour_list:\n",
     "        neighbour_articles = get_user_articles(n)[0]\n",
-    "        add_recs = np.setdiff1d(neighbour_articles, seen_articles, assume_unique=True)\n",
-    "        recs = np.unique(np.concatenate([recs,add_recs], axis=0))\n",
+    "        add_recs = list(np.setdiff1d(neighbour_articles, seen_articles, assume_unique=True))\n",
+    "        add_recs = np.array(add_recs,dtype=float)\n",
+    "        add_recs = list(article_interactions[article_interactions['article_id'].isin(add_recs)]['article_id'])\n",
+    "        recs+=add_recs\n",
     "        if len(recs)>m:\n",
     "            break\n",
-    "    recs = list(recs[:m])\n",
-    "    rec_names = get_article_names(recs)\n",
-    "    \n",
-    "    return recs, rec_names"
+    "    recs = recs[:m]\n",
+    "    return recs, rec_names\n"
    ]
   },
   {
@@ -1510,7 +1541,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "**Provide your response here.**\n",
+    "\n",
+    "You could use rank based recommendations. Wthout any information about a suer, it is helpful to infer based on what the general population likes."
    ]
   },
   {
@@ -1920,7 +1953,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "**Provide your response here.**\n",
+    "\n",
+    "We use singular value decomposition as there are no nulls. In the lession we use FunkSVD"
    ]
   },
   {
@@ -2478,7 +2513,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2492,7 +2527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
